# ffmpeg_image_transport

./: CMakeLists.txt  FindFFMPEG.cmake  README.md  ffmpeg_plugins.xml  package.xml
cfg/: EncoderDynConfig.cfg
cmake/: FindFFMPEG.cmake
docs/: compile_ffmpeg.md
include/ffmpeg_image_transport/: ffmpeg_decoder.h  ffmpeg_encoder.h  ffmpeg_publisher.h  ffmpeg_subscriber.h  tdiff.h
src/: ffmpeg_decoder.cpp  ffmpeg_encoder.cpp  ffmpeg_publisher.cpp  ffmpeg_subscriber.cpp  manifest.cpp  tdiff.cpp
